<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/icon_men"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/baiyang" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="+"
            android:textColor="#F4A460"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/icon_women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/baiyang" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">


        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/match_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_title"
                android:textColor="@color/def_black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/match_vs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/match_vs"
                android:textColor="@color/def_black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/match_pingfen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/match_pingfen"
                android:textColor="@color/def_black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/match_bizhong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/match_bizhong"
                android:textColor="@color/def_black"
                android:textSize="@dimen/textsize" />
            <TextView
                android:id="@+id/xiangyue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/match_xiangyue"
                android:textColor="@color/def_black"
                android:textSize="@dimen/textsize" />
            <TextView
                android:id="@+id/tcdj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/match_tcdj"
                android:textColor="@color/def_black"
                android:textSize="@dimen/textsize" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="解析："
                android:textColor="@color/def_black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/lianai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/def_black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="注意事项："
                android:textColor="@color/def_black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/zhuyi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/def_black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>